main - limit email length 254 chars. Bulk limit 10 000 emails.
